<resources>
    <string name="app_name">Money Tracker</string>


    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="yes">Yes</string>
    <!--<string name="section_format">Hello World from section: %1$d</string>-->
    <string name="map">Map</string>S
    <string name="addLocation">Add Location</string>
    <string name="discardAll">Discard All</string>
    <string name="addSelected">Add Selected</string>

    <string name="settings">Settings</string>

    <!--Strings related to Settings -->

    <!--Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="edit">Edit</string>
    <string name="set">Set</string>
    <string name="login">Log in</string>
    <string name="accounts">Accounts</string>
    <string name="delAcntAlertMsg">Are you sure you want to delete this account? This will also delete all transactions linked to this account</string>
    <string name="addAccount">Add Account</string>
    <string name="invalidInputFound">Invalid input found!</string>
    <string name="accountAdded">Account Added</string>
    <string name="addMapLocation">Add Map Location</string>
    <string name="locationNameCannotBeEmpty">Location name cannot be empty!</string>
    <string name="locationAdded">Location Added</string>
    <string name="addIncome">Add Income</string>
    <string name="addExpense">Add Expense</string>
    <string name="toAccount">To Account</string>
    <string name="fromAccount">From Account</string>
    <string name="transactionSaved">Transaction Saved</string>
    <string name="authentication">Authentication</string>
    <string name="passwordIsWrong">Password is wrong!</string>
    <string name="passByNotification">Pass By Notification</string>
    <string name="youPassedBy">You passed by</string>
    <string name="anySpends">of your saved locations recently... Any spends?</string>
    <string name="noMatch">Passwords do not match!</string>
    <string name="shortPassword"><![CDATA[New password is too short! < 5 characters]]></string>
    <string name="passwordSet">Password successfully set</string>
    <string name="setPassword">Set Password</string>
    <string name="editPassword">Edit Password</string>
    <string name="oldPassWrong">Old password is not correct!</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="enablePassword">Enable Password</string>
    <string name="disablePassword">Disable Password</string>
    <string name="mainMenu">Main Menu</string>
    <string name="statistics">Statistics</string>
    <string name="locations">Locations</string>
    <string name="passBys">Pass Bys</string>
    <string name="delTransAlertMsg">Are you sure you want to delete this transaction?</string>
    <string name="expensesOfThisMonth">Expenses of This Month</string>
    <string name="expensesOf">Expenses of </string>
    <string name="delLocAlertMsg">Are you sure you want to delete this location?</string>
    <string name="enableLocationPrompt">To get to your location please enable location services</string>
    <string name="recentPassBys">Recent Pass Bys</string>
    <string name="selTransAdded">Selected Transactions were added</string>
    <string name="at">at</string>
    <string name="noGraphsAvail">No Graphs Available For Specified Entries!</string>
    <string name="expensesCategories">Expenses Categories</string>
    <string name="yearExCat">Year Expenses Categories</string>
    <string name="monthlyExpensesIn">Monthly Expenses in</string>
    <string name="ok">Ok</string>
    <string name="amount">Amount</string>
    <string name="notes">Notes</string>
    <string name="category">Category</string>
    <string name="recursive">Recursive</string>
    <string name="every">Every</string>
    <string name="lbFor">For</string>
    <string name="accountName">Account Name</string>
    <string name="currency">Currency</string>
    <string name="initialBalance">Initial Balance</string>
    <string name="normal">Normal</string>
    <string name="compare">Compare</string>
    <string name="passwordProtection">Password Protection</string>
    <string name="savedLocationsService">Saved Locations Service</string>
    <string name="locationName">Location Name</string>
    <string name="enterSavedPass">Enter Saved Password</string>
    <string name="oldPass">Old Password</string>
    <string name="newPass">New Password</string>
    <string name="confirmPass">Confirm New Password</string>
    <string name="sameStatDatePrompt">Please select two different time spans to compare</string>
    <string name="difStatLength">Cannot compare year with month</string>
    <string name="recursiveTransactions">Recursive Transactions</string>
    <string name="from">from</string>
    <string name="delRecTransactionAlertMsg">Are you sure to delete this recursive transaction? Note: This will only stop future transactions from happening, previous transactions will remain.</string>
    <string name="editRecTransaction">Edit Recursive Transaction</string>
    <string name="recTransactionEdited">Recursive Transaction Edited</string>
    <string name="cannotBeZero">For field cannot be zero, for infinity leave empty</string>
    <string name="viewDatabase">View Database</string>
    <string name="recursionLengthsInvalid">Recursion lengths invalid!</string>
    <string name="testActivity">Test Activity</string>
    <string name="leaveBlankForInfinite">- Leave the For field empty in order not to set an end date.</string>
    <string name="forFieldFromOriginal">- New end date value will be calculated starting from the original transaction\'s date:</string>

    <string-array name="expenseCategories">
        <item>Bills</item>
        <item>Clothes</item>
        <item>Entertainment</item>
        <item>Food</item>
        <item>Transportation</item>
        <item>Other</item>
    </string-array>

    <string-array name="recursionUnits">
        <item>Day</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>

    <string-array name="languages">
        <item>العربية</item>
        <item>English</item>
        <item>Türkçe</item>
    </string-array>

    <string-array name="monthsArrayEx">
        <item>All Year</item>
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string-array name="monthsArray">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>


    <string-array name="navigationItems">
        <item>Accounts</item>
        <item>Recursive Transactions</item>
        <item>Statistics</item>
        <item>Locations</item>
        <item>Pass Bys</item>
        <item>Settings</item>
    </string-array>

</resources>
