<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:id="@+id/accounts"
        android:title="@string/accounts"
        app:showAsAction="always" />

    <item android:id="@+id/recTransactions"
        android:title="@string/recursiveTransactions"
        app:showAsAction="always"/>

    <item android:id="@+id/testActivity"
        android:title="@string/testActivity"
        app:showAsAction="always"/>

    <item android:id="@+id/viewDatabase"
        android:title="@string/viewDatabase"
        app:showAsAction="always"/>

    <item android:id="@+id/statistics"
        android:title="@string/statistics"
        app:showAsAction="always"/>

    <item android:id="@+id/locations"
        android:title="@string/locations"
        app:showAsAction="always"/>

    <item android:id="@+id/passBys"
        android:title="@string/passBys"
        app:showAsAction="always"/>

    <item android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="always"/>

</menu>