<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/passItemLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="25dp"
    android:layout_marginTop="25dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/passItemHeader"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:weightSum="5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CheckBox
            android:id="@+id/addCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/locationDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4.5"
            android:gravity="center_vertical|start"
            android:textAlignment="viewStart"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/passItemBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="@+id/passItemHeader"
        app:layout_constraintTop_toBottomOf="@+id/passItemHeader">

        <LinearLayout
            android:id="@+id/amountLayout"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/amount"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:hint="@string/amount"
                android:inputType="numberDecimal"
                app:layout_constraintStart_toEndOf="@+id/amountLabel"
                app:layout_constraintTop_toBottomOf="@+id/transactionDate" />

            <TextView
                android:id="@+id/accountLabel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:gravity="right|center_vertical"
                android:paddingEnd="30dp"
                android:text="@string/fromAccount"
                android:textAlignment="viewEnd"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/accountLayout"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/amountLayout">

            <Spinner
                android:id="@+id/accountsDrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/notesLayout"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accountLayout">

            <EditText
                android:id="@+id/notes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/notes"
                android:inputType="textPersonName"
                app:layout_constraintStart_toEndOf="@+id/notesLabel"
                app:layout_constraintTop_toBottomOf="@+id/amount" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/categoryLayout"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:weightSum="5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notesLayout">

            <TextView
                android:id="@+id/categoryLabel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:elevation="0dp"
                android:gravity="center_vertical"
                android:text="@string/category"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="35dp"
                tools:layout_editor_absoluteY="306dp" />

            <Spinner
                android:id="@+id/catDrop"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                tools:layout_editor_absoluteX="152dp"
                tools:layout_editor_absoluteY="282dp" />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>


</LinearLayout>