<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="moi.moneytracker.activities.AddTransactionActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/addTransactionTB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="1dp"
        app:theme="@style/ToolbarTheme"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTransactionTB">

        <LinearLayout
            android:id="@+id/scrollLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/scrollLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="25dp">

                <Button
                    android:id="@+id/transactionDate"
                    android:layout_width="250dp"
                    android:layout_height="48dp"
                    android:text="Date"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/amountLayout"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal"
                    android:weightSum="5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/transactionDate">

                    <EditText
                        android:id="@+id/amount"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2.5"
                        android:hint="@string/amount"
                        android:inputType="numberDecimal"
                        app:layout_constraintStart_toEndOf="@+id/amountLabel"
                        app:layout_constraintTop_toBottomOf="@+id/transactionDate" />

                    <TextView
                        android:id="@+id/accountLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="2.5"
                        android:gravity="center_vertical"
                        android:paddingEnd="30dp"
                        android:textAlignment="viewEnd"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/accountLayout"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/amountLayout">

                    <Spinner
                        android:id="@+id/accountsDrop"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/notesLayout"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="30dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/accountLayout">

                    <EditText
                        android:id="@+id/notes"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/notes"
                        android:inputType="textPersonName"
                        app:layout_constraintStart_toEndOf="@+id/notesLabel"
                        app:layout_constraintTop_toBottomOf="@+id/amount" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/categoryLayout"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal"
                    android:weightSum="5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/notesLayout">

                    <TextView
                        android:id="@+id/categoryLabel"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:elevation="0dp"
                        android:gravity="center_vertical"
                        android:text="@string/category"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:layout_editor_absoluteX="35dp"
                        tools:layout_editor_absoluteY="306dp" />

                    <Spinner
                        android:id="@+id/catDrop"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        tools:layout_editor_absoluteX="152dp"
                        tools:layout_editor_absoluteY="282dp" />
                </LinearLayout>

                <CheckBox
                    android:id="@+id/isRecursiveChk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="30dp"
                    android:layout_weight="1"
                    android:paddingStart="0dp"
                    android:text="@string/recursive"
                    app:layout_constraintStart_toStartOf="@+id/categoryLayout"
                    app:layout_constraintTop_toBottomOf="@+id/categoryLayout" />

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/recurrsivePanel"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="5dp"
                    app:layout_constraintLeft_toLeftOf="@+id/isRecursiveChk"
                    app:layout_constraintStart_toStartOf="@+id/isRecursiveChk"
                    app:layout_constraintTop_toBottomOf="@+id/isRecursiveChk">

                    <LinearLayout
                        android:id="@+id/linearLayout3"
                        android:layout_width="310dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        android:weightSum="3"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteX="8dp">

                        <TextView
                            android:id="@+id/everyLabel"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/every"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/freqNumber"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:inputType="number" />

                        <Spinner
                            android:id="@+id/freqDrop"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout4"
                        android:layout_width="310dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                        tools:layout_editor_absoluteX="8dp">

                        <TextView
                            android:id="@+id/forLabel"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/lbFor"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/forNumber"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:inputType="number" />

                        <Spinner
                            android:id="@+id/forDrop"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            tools:layout_editor_absoluteX="0dp"
                            tools:layout_editor_absoluteY="8dp" />
                    </LinearLayout>

                </android.support.constraint.ConstraintLayout>

                <TextView
                    android:id="@+id/addTransactionFooter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="footer"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/recurrsivePanel"
                    tools:layout_editor_absoluteX="25dp" />

            </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
